# shrine

./: .gitignore  Cargo.toml  README.md  cov.sh  shrine  smoke-tests.sh
.github/workflows/: test.yml
src/: agent.rs  bytes.rs  cli.rs  controller.rs  encrypt.rs  file_format.rs  format.rs  git.rs  io.rs  lib.rs  serialize.rs  shrine.rs  shrine_file.rs  utils.rs  values.rs
src/agent/: client.rs  entities.rs  server.rs
src/controller/: agent.rs  config.rs  convert.rs  dump.rs  get.rs  import.rs  info.rs  init.rs  ls.rs  rm.rs  set.rs
src/encrypt/: aes.rs  plain.rs
src/format/: format0.rs  format1.rs
src/serialize/: bson.rs  json.rs  message_pack.rs
src/shrine/: encryption.rs  holder.rs  local.rs  metadata.rs  remote.rs  serialization.rs
src/shrine/holder/: node.rs
src/values/: bytes.rs  key.rs  password.rs  secret.rs
test-data/v0-bson-aes/: shrine
test-data/v0-bson-clear/: shrine
test-data/v1-msgpack-aes/: shrine
test-data/v1-msgpack-clear/: shrine
tests/: integration.rs
