[package]
name = "shrine"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm-siv = "0.11.1"
borsh = "0.10.3"
bson = "2.6.1"
bytes = { version = "1.4.0", features = ["serde"] }
clap = { version = "4.3.1", features = ["derive"] }
pbkdf2 = "0.12.1"
regex = "1.8.3"
rmp-serde = "1.1.1"
rpassword = "7.2.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sha2 = "0.10.6"
thiserror = "1.0.40"

[lib]
name = "shrine"
path = "src/lib.rs"

[[bin]]
name = "shrine"
path = "src/cli.rs"
