[package]
name = "shrine"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Secrets manager written in rust"
homepage = "https://github.com/cpollet/shrine"
documentation = "https://github.com/cpollet/shrine"
repository = "https://github.com/cpollet/shrine"
readme = "README.md"
exclude = [
    ".github/workflows/*",
    "renovate.json"
]

[dependencies]
aes-gcm-siv = { version = "0.11.1", features = ["std"] }
atty = "0.2.14"
base64 = "0.21.2"
borsh = "0.10.3"
bson = "2.6.1"
bytes = { version = "1.4.0", features = ["serde"] }
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.2", features = ["derive"] }
csv = "1.2.2"
dotenv-parser = "0.1.3"
git2 = "0.17.2"
pbkdf2 = "0.12.1"
regex = "1.8.4"
rmp-serde = "1.1.1"
rpassword = "7.2.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
sha2 = "0.10.7"
thiserror = "1.0.40"
uuid = "1.3.4"
whoami = { version = "1.4.0", default-features = false }

[target.'cfg(target_family = "unix")'.dependencies]
nix = "0.26.2"

[lib]
name = "shrine"
path = "src/lib.rs"

[[bin]]
name = "shrine"
path = "src/cli.rs"
