[package]
name = "shrine"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Secrets manager written in rust"
homepage = "https://github.com/cpollet/shrine"
documentation = "https://github.com/cpollet/shrine"
repository = "https://github.com/cpollet/shrine"
readme = "README.md"
exclude = [
    ".github/workflows/*",
    "renovate.json"
]

[dependencies]
aes-gcm-siv = { version = "0.11.1", features = ["std"] }
atty = "0.2.14"
base64 = "0.21.2"
borsh = "0.10.3"
bson = "2.6.1"
bytes = { version = "1.4.0", features = ["serde"] }
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.8", features = ["derive"] }
csv = "1.2.2"
dotenv-parser = "0.1.3"
git2 = "0.17.2"
pbkdf2 = "0.12.1"
regex = "1.9.1"
rmp-serde = "1.1.1"
rpassword = "7.2.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
sha2 = "0.10.7"
thiserror = "1.0.44"
uuid = "1.4.0"
whoami = { version = "1.4.1", default-features = false }

[target.'cfg(unix)'.dependencies]
async-recursion = "1.0.4"
serde_qs = "0.12.0"
tokio-cron-scheduler = "0.9.4"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
urlencoding = "2.1.2"
tower = "0.4.13"
futures = "0.3.28"
axum = "0.6.18"
daemonize = "0.5.0"
hyper = "0.14.27"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros", "signal"] }
hyperlocal = "0.8.0"
nix = "0.26.2"

[dev-dependencies]
tempfile = "3.6.0"
httpmock = "0.6.7"
assert_cmd = "2.0.12"
predicates = "3.0.3"

[lib]
name = "shrine"
path = "src/lib.rs"

[[bin]]
name = "shrine"
path = "src/cli.rs"
